--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
         <div class="profile__info">
           <div class="profile__container">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
-            <div class="profile__box-button">
-              <button class="profile__edit-button opacity"></button>
-            </div>
+            <button class="profile__edit-button opacity" type="button"></button> 
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <div class="profile__add-button opacity">
+        <button class="profile__add-button opacity" type="button">
           <div class="profile__button"></div>
-        </div>
+        </button>
       </section>
 
       <section class="places" aria-label="Секция с карточками">
@@ -34,62 +32,59 @@
           <img class="place__image" src="./Image/photo-karachaevsk.jpg" alt="Заброшенная церковь на фоне гор в Карачаевске">
           <div class="place__container">
             <h2 class="place__title">Карачаевск</h2>
-            <button class="place__button opacity-heart"></button>
+            <button class="place__button" type="button"></button>
           </div>
         </article>        
         <article class="place">
           <img class="place__image" src="./Image/photo-elbrus.jpg" alt="Гора Эльбрус в дали">
           <div class="place__container">
             <h2 class="place__title">Гора Эльбрус</h2>
-            <button class="place__button opacity-heart"></button>
+            <button class="place__button" type="button"></button>
           </div>
         </article>
         <article class="place">
           <img class="place__image" src="./Image/photo-dombai.jpg" alt="Гора Донбая">
           <div class="place__container">
             <h2 class="place__title">Домбай</h2>
-            <button class="place__button opacity-heart"></button>
+            <button class="place__button" type="button"></button>
           </div>
         </article>
         <article class="place">
           <img class="place__image" src="./Image/photo-elbrus.jpg" alt="Гора Эльбрус в дали">
           <div class="place__container">
             <h2 class="place__title">Гора Эльбрус</h2>
-            <button class="place__button opacity-heart"></button>
+            <button class="place__button" type="button"></button>
           </div>
         </article>
         <article class="place">
           <img class="place__image" src="./Image/photo-dombai.jpg" alt="Гора Донбая">
           <div class="place__container">
             <h2 class="place__title">Домбай</h2>
-            <button class="place__button opacity-heart"></button>
+            <button class="place__button" type="button"></button>
           </div>
         </article>
         <article class="place">
           <img class="place__image" src="./Image/photo-karachaevsk.jpg" alt="Заброшенная церковь на фоне гор в Карачаевске">
           <div class="place__container">
             <h2 class="place__title">Карачаево-Черкесия</h2>
-            <button class="place__button opacity-heart"></button>
+            <button class="place__button" type="button"></button>
           </div>
         </article>
       </section>
-
-      <section class="footer">
-        <p class="footer__author">&copy; 2020 Mesto Russia</p>
-      </section>
     </main>
+    <footer class="footer">
+      <p class="footer__author">&copy; 2020 Mesto Russia</p>
+    </footer>
   </div>
 
   <div class="popup">
     <div class="popup__window">
-      <button class="popup__close-button opacity"></button>
+      <button class="popup__close-button opacity" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form">
-        <input type="text" class="popup__name-input" name="firstname" 
-          value="Жак-Ив Кусто">
-        <input type="text" class="popup__job-input" name="job"
-          value="Исследователь океана">        
-        <input type="submit" class="popup__form-submit" value="Сохранить">
+      <form class="popup__form" name="popup-form">
+        <input type="text" class="popup__input popup__input_el_firstname" name="firstname">
+        <input type="text" class="popup__input popup__input_el_job" name="job">        
+        <input type="submit" class="popup__form-submit opacity" value="Сохранить">
       </form>
     </div>
   </div>
