--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
           </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__add-button opacity" type="button">
-          <div class="profile__button"></div>
-        </button>
+        <button class="profile__add-button opacity" type="button"></button>
       </section>
 
       <section class="places" aria-label="Секция с карточками">
