--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <form class="popup__form" name="popup-form">
         <input type="text" class="popup__input popup__input_el_firstname" name="firstname">
         <input type="text" class="popup__input popup__input_el_job" name="job">        
-        <input type="submit" class="popup__form-submit opacity" value="Сохранить">
+        <input type="submit" class="popup__form-submit" value="Сохранить">
       </form>
     </div>
   </div>
