--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 
-  <div class="popup popup__add-card">
+  <div class="popup popup_add-card">
     <div class="popup__window">
       <button class="popup__close-button popup__close-add-card opacity" type="button"></button>
       <h2 class="popup__title">Новое место</h2>
@@ -72,7 +72,7 @@
     </div>
   </div>
 
-  <div class="popup popup__full-card popup_opacity">
+  <div class="popup popup_full-card popup_opacity">
     <div class="popup__container">
       <button class="popup__close-button opacity" type="button"></button>
       <img class="popup__image">
