--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
       </section>
 
       
-        <section class="places" aria-label="Секция с карточками">
-          
-        </section>
+      <section class="places" aria-label="Секция с карточками">  
+      </section>
 
         <template id="place-template">
           <article class="place">
@@ -45,8 +44,7 @@
       <p class="footer__author">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
-
-  <div class="popup">
+  <div class="popup profile-popup">
     <div class="popup__window">
       <button class="popup__close-button opacity" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
@@ -57,7 +55,6 @@
       </form>
     </div>
   </div>
-
   <div class="popup popup_add-card">
     <div class="popup__window">
       <button class="popup__close-button popup__close-add-card opacity" type="button"></button>
@@ -71,7 +68,6 @@
       </form>
     </div>
   </div>
-
   <div class="popup popup_full-card popup_opacity">
     <div class="popup__container">
       <button class="popup__close-button opacity" type="button"></button>
