--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
     <div class="popup__window">
       <button class="popup__close-button opacity" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form" name="popup-form">
-        <input type="text" class="popup__input popup__input_el_firstname" name="firstname">
-        <input type="text" class="popup__input popup__input_el_job" name="job">        
+      <form class="popup__form popup__form_profile" name="profile" novalidate>
+        <input id="popup__firstname-input" type="text" class="popup__input popup__input_el_firstname popup__input_profile"
+          name="firstname" required minlength="2" maxlength="40">
+        <span class="popup__firstname-input-error popup__input-error"></span>
+        <input id="popup__job-input" type="text" class="popup__input popup__input_el_job"
+          name="job" required minlength="2" maxlength="200">
+        <span class="popup__job-input-error popup__input-error"></span>
         <input type="submit" class="popup__form-submit" value="Сохранить">
       </form>
     </div>
@@ -59,12 +63,14 @@
     <div class="popup__window">
       <button class="popup__close-button popup__close-add-card opacity" type="button"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__form popup__form_add-card" name="popup-form">
-        <input type="text" class="popup__input popup__input_el_place-name" name="firstname" 
-          placeholder="Название">
-        <input type="url" class="popup__input popup__input_el_place-src" name="job" 
-          placeholder="Ссылка на картинку">        
-        <input type="submit" class="popup__form-submit" value="Создать">
+      <form class="popup__form popup__form_add-card" name="add" novalidate>
+        <input id="popup__name-card" type="text" class="popup__input popup__input_el_place-name" name="name" 
+          placeholder="Название" required minlength="2" maxlength="30">
+        <span class="popup__name-card-error popup__input-error"></span>
+        <input id="popup__link-card" type="url" class="popup__input popup__input_el_place-src" name="link" 
+          placeholder="Ссылка на картинку" required >
+        <span class="popup__link-card-error popup__input-error"></span>
+        <input type="submit" class="popup__form-submit popup__form-submit_invalid" value="Создать">
       </form>
     </div>
   </div>
@@ -75,6 +81,7 @@
       <h2 class="popup__caption"></h2>
     </div>
   </div>
-<script src="./scripts/index.js"></script> 
+<script src="./scripts/index.js"></script>
+<script src="./scripts/validate.js"></script>
 </body>
 </html>
