--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
       <h2 class="popup__caption"></h2>
     </div>
   </div>
-  <script src="./scripts/cards.js"></script>
-<script src="./scripts/index.js"></script>
-<script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
