--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="popup__window">
       <button class="popup__close-button popup__close-add-card opacity" type="button"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__form popup__form_add-card" name="add" novalidate>
+      <form class="popup__form popup__form_add-card" name="add-card" novalidate>
         <input id="popup__name-card" type="text" class="popup__input popup__input_el_place-name" name="name" 
           placeholder="Название" required minlength="2" maxlength="30">
         <span class="popup__name-card-error popup__input-error"></span>
