--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,14 @@
     
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="<%=require('./Image/profile-avatar.jpg')%>" alt="Аватарка">
+        <img class="profile__avatar" src="" alt="Аватарка">
+        <button class="profile__avatar-btn"></button>
         <div class="profile__info">
           <div class="profile__container">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button opacity" type="button"></button> 
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button class="profile__add-button opacity" type="button"></button>
       </section>
@@ -34,7 +35,10 @@
             <img class="place__image opacity">
             <div class="place__container">
               <h2 class="place__title"></h2>
-              <button class="place__button" type="button"></button>
+              <div class="place__like-container">
+                <button class="place__button" type="button"></button>
+                <p class="place__like-counter"></p>
+              </div>
             </div>
           </article>
         </template>
@@ -43,6 +47,7 @@
       <p class="footer__author">&copy; 2020 Mesto Russia</p>
     </footer>
   </div>
+
   <div class="popup profile-popup">
     <div class="popup__window">
       <button class="popup__close-button opacity" type="button"></button>
@@ -58,6 +63,20 @@
       </form>
     </div>
   </div>
+
+  <div class="popup popup_avatar">
+    <div class="popup__window">
+      <button class="popup__close-button popup__close-add-card opacity" type="button"></button>
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form class="popup__form popup__form_avatar" name="avatar" novalidate>
+        <input id="popup__link-card" type="url" class="popup__input popup__input_el_place-src" name="link" 
+          placeholder="Ссылка на аватар" required >
+        <span class="popup__link-card-error popup__input-error"></span>
+        <input type="submit" class="popup__form-submit popup__form-submit_invalid" value="Создать" disabled>
+      </form>
+    </div>
+  </div>
+
   <div class="popup popup_add-card">
     <div class="popup__window">
       <button class="popup__close-button popup__close-add-card opacity" type="button"></button>
@@ -73,6 +92,17 @@
       </form>
     </div>
   </div>
+
+  <div class="popup popup_confirm-delete">
+    <div class="popup__window">
+      <button class="popup__close-button opacity" type="button"></button>
+      <h2 class="popup__title">Вы уверены?</h2>
+      <form class="popup__form popup__form_confirm-delete" name="confirm-delete">
+        <input type="submit" class="popup__form-submit" value="Да">
+      </form>
+    </div>
+  </div>
+
   <div class="popup popup_full-card popup_opacity">
     <div class="popup__container">
       <button class="popup__close-button opacity" type="button"></button>
