--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src="" alt="Аватарка">
+        <img class="profile__avatar" src="#" alt="Аватарка">
         <button class="profile__avatar-btn"></button>
         <div class="profile__info">
           <div class="profile__container">
@@ -69,9 +69,9 @@
       <button class="popup__close-button popup__close-add-card opacity" type="button"></button>
       <h2 class="popup__title">Обновить аватар</h2>
       <form class="popup__form popup__form_avatar" name="avatar" novalidate>
-        <input id="popup__link-card" type="url" class="popup__input popup__input_el_place-src" name="link" 
+        <input id="popup__link-avatar" type="url" class="popup__input popup__input_el_place-src" name="link" 
           placeholder="Ссылка на аватар" required >
-        <span class="popup__link-card-error popup__input-error"></span>
+        <span class="popup__link-avatar-error popup__input-error"></span>
         <input type="submit" class="popup__form-submit popup__form-submit_invalid" value="Создать" disabled>
       </form>
     </div>
